--- a/0-Data-Modeling/Projects/sparkify-data-etl/test.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl/test.ipynb
@@ -32,14 +32,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -57,10 +59,69 @@
        "        <th>location</th>\n",
        "        <th>user_agent</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2018-11-11 02:33:56.796000</td>\n",
+       "        <td>69</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>455</td>\n",
+       "        <td>Philadelphia-Camden-Wilmington, PA-NJ-DE-MD</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2018-11-11 02:36:10.796000</td>\n",
+       "        <td>69</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>455</td>\n",
+       "        <td>Philadelphia-Camden-Wilmington, PA-NJ-DE-MD</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2018-11-11 02:40:34.796000</td>\n",
+       "        <td>69</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>455</td>\n",
+       "        <td>Philadelphia-Camden-Wilmington, PA-NJ-DE-MD</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2018-11-11 04:36:13.796000</td>\n",
+       "        <td>32</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>456</td>\n",
+       "        <td>New York-Newark-Jersey City, NY-NJ-PA</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2018-11-11 04:36:46.796000</td>\n",
+       "        <td>75</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>284</td>\n",
+       "        <td>Columbia, SC</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_3) AppleWebKit/537.75.14 (KHTML, like Gecko) Version/7.0.3 Safari/537.75.14&quot;</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(1, datetime.datetime(2018, 11, 11, 2, 33, 56, 796000), 69, 'free', None, None, 455, 'Philadelphia-Camden-Wilmington, PA-NJ-DE-MD', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (2, datetime.datetime(2018, 11, 11, 2, 36, 10, 796000), 69, 'free', None, None, 455, 'Philadelphia-Camden-Wilmington, PA-NJ-DE-MD', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (3, datetime.datetime(2018, 11, 11, 2, 40, 34, 796000), 69, 'free', None, None, 455, 'Philadelphia-Camden-Wilmington, PA-NJ-DE-MD', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (4, datetime.datetime(2018, 11, 11, 4, 36, 13, 796000), 32, 'free', None, None, 456, 'New York-Newark-Jersey City, NY-NJ-PA', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (5, datetime.datetime(2018, 11, 11, 4, 36, 46, 796000), 75, 'free', None, None, 284, 'Columbia, SC', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_3) AppleWebKit/537.75.14 (KHTML, like Gecko) Version/7.0.3 Safari/537.75.14\"')]"
       ]
      },
      "execution_count": 3,
@@ -74,7 +135,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "        <th>count_1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>96</td>\n",
+       "        <td>6820</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(96, 6820)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT COUNT(DISTINCT user_id), COUNT(user_id) FROM users;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>name</th>\n",
+       "        <th>location</th>\n",
+       "        <th>latitude</th>\n",
+       "        <th>longitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARD7TVE1187B99BFB1</td>\n",
+       "        <td>Casual</td>\n",
+       "        <td>California - LA</td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>Clp</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>Clp</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARD7TVE1187B99BFB1</td>\n",
+       "        <td>Casual</td>\n",
+       "        <td>California - LA</td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('ARD7TVE1187B99BFB1', 'Casual', 'California - LA', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARNTLGG11E2835DDB9', 'Clp', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARNTLGG11E2835DDB9', 'Clp', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARD7TVE1187B99BFB1', 'Casual', 'California - LA', Decimal('NaN'), Decimal('NaN'))]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM artists WHERE artist_id in ('ARNTLGG11E2835DDB9', 'ARD7TVE1187B99BFB1');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +314,7 @@
        " (75, 'Joseph', 'Gutierrez', 'M', 'free')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +333,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -175,19 +348,51 @@
        "        <th>duration</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SONYPOM12A8C13B2D7</td>\n",
-       "        <td>I Think My Wife Is Running Around On Me (Taco Hell)</td>\n",
-       "        <td>ARDNS031187B9924F0</td>\n",
-       "        <td>2005</td>\n",
-       "        <td>186.48771</td>\n",
+       "        <td>SONHOTT12A8C13493C</td>\n",
+       "        <td>Something Girls</td>\n",
+       "        <td>AR7G5I41187FB4CE6C</td>\n",
+       "        <td>1982</td>\n",
+       "        <td>233.40363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOIAZJW12AB01853F1</td>\n",
+       "        <td>Pink World</td>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>1984</td>\n",
+       "        <td>269.81832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOFSOCN12A8C143F5D</td>\n",
+       "        <td>Face the Ashes</td>\n",
+       "        <td>ARXR32B1187FB57099</td>\n",
+       "        <td>2007</td>\n",
+       "        <td>209.60608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOHKNRJ12A6701D1F8</td>\n",
+       "        <td>Drop of Rain</td>\n",
+       "        <td>AR10USD1187B99F3F1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>189.57016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOQHXMF12AB0182363</td>\n",
+       "        <td>Young Boy Blues</td>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>0</td>\n",
+       "        <td>218.77506</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SONYPOM12A8C13B2D7', 'I Think My Wife Is Running Around On Me (Taco Hell)', 'ARDNS031187B9924F0', 2005, Decimal('186.48771'))]"
+       "[('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, Decimal('233.40363')),\n",
+       " ('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, Decimal('269.81832')),\n",
+       " ('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, Decimal('209.60608')),\n",
+       " ('SOHKNRJ12A6701D1F8', 'Drop of Rain', 'AR10USD1187B99F3F1', 0, Decimal('189.57016')),\n",
+       " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, Decimal('218.77506'))]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +411,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -221,19 +426,51 @@
        "        <th>longitude</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>ARDNS031187B9924F0</td>\n",
-       "        <td>Tim Wilson</td>\n",
+       "        <td>AR7G5I41187FB4CE6C</td>\n",
+       "        <td>Adam Ant</td>\n",
+       "        <td>London, England</td>\n",
        "        <td>NaN</td>\n",
        "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>Planet P Project</td>\n",
+       "        <td></td>\n",
        "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARXR32B1187FB57099</td>\n",
+       "        <td>Gob</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR10USD1187B99F3F1</td>\n",
+       "        <td>Tweeterfriendly Music</td>\n",
+       "        <td>Burlington, Ontario, Canada</td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>JennyAnyKind</td>\n",
+       "        <td>North Carolina</td>\n",
+       "        <td>35.21962</td>\n",
+       "        <td>-80.01955</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('ARDNS031187B9924F0', 'Tim Wilson', 'NaN', Decimal('NaN'), Decimal('NaN'))]"
+       "[('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('AR8ZCNI1187B9A069B', 'Planet P Project', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARXR32B1187FB57099', 'Gob', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('AR10USD1187B99F3F1', 'Tweeterfriendly Music', 'Burlington, Ontario, Canada', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', Decimal('35.21962'), Decimal('-80.01955'))]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +560,7 @@
        " (datetime.datetime(2018, 11, 11, 4, 36, 46, 796000), 4, 11, 45, 11, 2018, 6)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,10 +579,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "        <th>count_1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>69</td>\n",
+       "        <td>71</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(69, 71)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT count(distinct artist_id), count(artist_id) from artists;"
+   ]
   }
  ],
  "metadata": {
