--- a/0-Data-Modeling/Projects/sparkify-data-etl/etl.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl/etl.ipynb
@@ -250,15 +250,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artist_data.groupby('artist_id')['artist_']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -739,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +744,7 @@
        "Name: ts, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +863,7 @@
        "5 2018-11-11 04:36:46.796     4   11    45     11  2018        6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -955,30 +946,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Theodore</td>\n",
-       "      <td>Harris</td>\n",
-       "      <td>M</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Anabelle</td>\n",
+       "      <td>Simpson</td>\n",
+       "      <td>F</td>\n",
        "      <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>16</td>\n",
-       "      <td>Rylan</td>\n",
-       "      <td>George</td>\n",
-       "      <td>M</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Anabelle</td>\n",
+       "      <td>Simpson</td>\n",
+       "      <td>F</td>\n",
        "      <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>26</td>\n",
-       "      <td>Ryan</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>M</td>\n",
+       "      <td>69</td>\n",
+       "      <td>Anabelle</td>\n",
+       "      <td>Simpson</td>\n",
+       "      <td>F</td>\n",
        "      <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>32</td>\n",
        "      <td>Lily</td>\n",
        "      <td>Burns</td>\n",
@@ -986,11 +977,11 @@
        "      <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Molly</td>\n",
-       "      <td>Taylor</td>\n",
-       "      <td>F</td>\n",
+       "      <th>5</th>\n",
+       "      <td>75</td>\n",
+       "      <td>Joseph</td>\n",
+       "      <td>Gutierrez</td>\n",
+       "      <td>M</td>\n",
        "      <td>free</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -998,22 +989,21 @@
        "</div>"
       ],
       "text/plain": [
-       "  userId firstName lastName gender level\n",
-       "0     14  Theodore   Harris      M  free\n",
-       "1     16     Rylan   George      M  free\n",
-       "2     26      Ryan    Smith      M  free\n",
-       "3     32      Lily    Burns      F  free\n",
-       "4     35     Molly   Taylor      F  free"
+       "  userId firstName   lastName gender level\n",
+       "0     69  Anabelle    Simpson      F  free\n",
+       "1     69  Anabelle    Simpson      F  free\n",
+       "2     69  Anabelle    Simpson      F  free\n",
+       "4     32      Lily      Burns      F  free\n",
+       "5     75    Joseph  Gutierrez      M  free"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "user_df = df[['userId', 'firstName', 'lastName', 'gender', 'level']]\n",
-    "user_df = user_df.groupby('userId').first().reset_index()\n",
     "user_df.head()"
    ]
   },
@@ -1027,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,23 +1049,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "not all arguments converted during string formatting",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-b182c554a6b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     songplay_data = (index, pd.to_datetime(row.ts, unit='ms'), row.userId, row.level, \n\u001b[1;32m     14\u001b[0m                      songid, artistid, row.sessionId, row.location, row.userAgent)\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msongplay_table_insert\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msongplay_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: not all arguments converted during string formatting"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for index, row in df.iterrows():\n",
     "\n",
@@ -1089,7 +1067,7 @@
     "        songid, artistid = None, None\n",
     "\n",
     "    # insert songplay record\n",
-    "    songplay_data = (index, pd.to_datetime(row.ts, unit='ms'), row.userId, row.level, \n",
+    "    songplay_data = (pd.to_datetime(row.ts, unit='ms'), row.userId, row.level, \n",
     "                     songid, artistid, row.sessionId, row.location, row.userAgent)\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
@@ -1111,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
