--- a/0-Data-Modeling/Projects/sparkify-data-etl/test.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl/test.ipynb
@@ -135,119 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>count</th>\n",
-       "        <th>count_1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>96</td>\n",
-       "        <td>6820</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(96, 6820)]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%sql SELECT COUNT(DISTINCT user_id), COUNT(user_id) FROM users;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "4 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>artist_id</th>\n",
-       "        <th>name</th>\n",
-       "        <th>location</th>\n",
-       "        <th>latitude</th>\n",
-       "        <th>longitude</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARD7TVE1187B99BFB1</td>\n",
-       "        <td>Casual</td>\n",
-       "        <td>California - LA</td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARNTLGG11E2835DDB9</td>\n",
-       "        <td>Clp</td>\n",
-       "        <td></td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARNTLGG11E2835DDB9</td>\n",
-       "        <td>Clp</td>\n",
-       "        <td></td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARD7TVE1187B99BFB1</td>\n",
-       "        <td>Casual</td>\n",
-       "        <td>California - LA</td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('ARD7TVE1187B99BFB1', 'Casual', 'California - LA', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('ARNTLGG11E2835DDB9', 'Clp', '', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('ARNTLGG11E2835DDB9', 'Clp', '', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('ARD7TVE1187B99BFB1', 'Casual', 'California - LA', Decimal('NaN'), Decimal('NaN'))]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%sql SELECT * FROM artists WHERE artist_id in ('ARNTLGG11E2835DDB9', 'ARD7TVE1187B99BFB1');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +202,7 @@
        " (75, 'Joseph', 'Gutierrez', 'M', 'free')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +221,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "5 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -354,45 +242,13 @@
        "        <td>1982</td>\n",
        "        <td>233.40363</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOIAZJW12AB01853F1</td>\n",
-       "        <td>Pink World</td>\n",
-       "        <td>AR8ZCNI1187B9A069B</td>\n",
-       "        <td>1984</td>\n",
-       "        <td>269.81832</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOFSOCN12A8C143F5D</td>\n",
-       "        <td>Face the Ashes</td>\n",
-       "        <td>ARXR32B1187FB57099</td>\n",
-       "        <td>2007</td>\n",
-       "        <td>209.60608</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOHKNRJ12A6701D1F8</td>\n",
-       "        <td>Drop of Rain</td>\n",
-       "        <td>AR10USD1187B99F3F1</td>\n",
-       "        <td>0</td>\n",
-       "        <td>189.57016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOQHXMF12AB0182363</td>\n",
-       "        <td>Young Boy Blues</td>\n",
-       "        <td>ARGSJW91187B9B1D6B</td>\n",
-       "        <td>0</td>\n",
-       "        <td>218.77506</td>\n",
-       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, Decimal('233.40363')),\n",
-       " ('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, Decimal('269.81832')),\n",
-       " ('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, Decimal('209.60608')),\n",
-       " ('SOHKNRJ12A6701D1F8', 'Drop of Rain', 'AR10USD1187B99F3F1', 0, Decimal('189.57016')),\n",
-       " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, Decimal('218.77506'))]"
+       "[('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, Decimal('233.40363'))]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +267,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "5 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -432,45 +288,13 @@
        "        <td>NaN</td>\n",
        "        <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "        <td>AR8ZCNI1187B9A069B</td>\n",
-       "        <td>Planet P Project</td>\n",
-       "        <td></td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARXR32B1187FB57099</td>\n",
-       "        <td>Gob</td>\n",
-       "        <td></td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>AR10USD1187B99F3F1</td>\n",
-       "        <td>Tweeterfriendly Music</td>\n",
-       "        <td>Burlington, Ontario, Canada</td>\n",
-       "        <td>NaN</td>\n",
-       "        <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ARGSJW91187B9B1D6B</td>\n",
-       "        <td>JennyAnyKind</td>\n",
-       "        <td>North Carolina</td>\n",
-       "        <td>35.21962</td>\n",
-       "        <td>-80.01955</td>\n",
-       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('AR8ZCNI1187B9A069B', 'Planet P Project', '', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('ARXR32B1187FB57099', 'Gob', '', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('AR10USD1187B99F3F1', 'Tweeterfriendly Music', 'Burlington, Ontario, Canada', Decimal('NaN'), Decimal('NaN')),\n",
-       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', Decimal('35.21962'), Decimal('-80.01955'))]"
+       "[('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', Decimal('NaN'), Decimal('NaN'))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +384,7 @@
        " (datetime.datetime(2018, 11, 11, 4, 36, 46, 796000), 4, 11, 45, 11, 2018, 6)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,43 +403,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>count</th>\n",
-       "        <th>count_1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>69</td>\n",
-       "        <td>71</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(69, 71)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%sql SELECT count(distinct artist_id), count(artist_id) from artists;"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
