--- a/0-Data-Modeling/Exercises/Lesson1_Exercise1_Creating_a_Table_with_Postgres.ipynb
+++ b/0-Data-Modeling/Exercises/Lesson1_Exercise1_Creating_a_Table_with_Postgres.ipynb
@@ -39,18 +39,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALTER ROLE\r\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "!echo \"alter user student createdb;\" | sudo -u postgres psql"
+    "# !echo \"alter user student createdb;\" | sudo -u postgres psql"
    ]
   },
   {
@@ -139,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,14 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Across The Universe', 'The Beatles', 1970, 'False', 'Let It Be')\n",
       "('Across The Universe', 'The Beatles', 1970, 'Let It Be', 'false')\n",
       "('The Beatles', 'Think For Yourself', 1965, 'Rubber Soul', 'false')\n"
      ]
@@ -271,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
