updated data-etl-cassandra project init

--- a/0-Data-Modeling/Exercises/Lesson3_Exercise1_Three_Queries_Three_Tables.ipynb
+++ b/0-Data-Modeling/Exercises/Lesson3_Exercise1_Three_Queries_Three_Tables.ipynb
@@ -457,9 +457,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.execute(\"DROP TABLE IF EXISTS music_library\")\n",
-    "session.execute(\"DROP TABLE IF EXISTS artist_library\")\n",
-    "session.execute(\"DROP TABLE IF EXISTS album_library\")"
+    "query = \"DROP TABLE IF EXISTS music_library\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "query = \"DROP TABLE IF EXISTS album_library\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "query = \"DROP TABLE IF EXISTS artist_library\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
